--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.96.1",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "mongoose": "^7.5.2"
   }
 }
