--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "jest": "^29.6.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.96.1",
+    "aws": "^0.0.3-2",
+    "aws-cdk-lib": "^2.96.1",
+    "aws-cli": "^0.0.2",
     "constructs": "^10.0.0",
     "mongoose": "^7.5.2"
   }
