--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "test": "jest"
   },
   "devDependencies": {
-    "aws-cdk": "2.96.1",
+    "aws-cdk": "^2.96.1",
     "jest": "^29.6.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-iam": "^1.204.0",
     "aws-cdk-lib": "2.96.1",
     "aws-sdk": "^2.1462.0",
     "constructs": "^10.0.0",
