--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aws-sdk": "^2.1462.0",
     "constructs": "^10.0.0",
     "esbuild": "^0.19.3",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "stripe": "^13.7.0"
   }
 }
