--- a/.github/workflows/ProjectBackEndWorkflow.yml
+++ b/.github/workflows/ProjectBackEndWorkflow.yml
@@ -51,7 +51,7 @@ jobs:
           cdk_version: '2.96.1'
           working_dir: 'src'
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'eu-west-3'
       - name: Notify Slack Channel
