--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-cdk-lib": "2.96.1",
     "aws-sdk": "^2.1462.0",
+    "axios": "^1.5.1",
+    "bad-words": "^3.0.4",
     "constructs": "^10.0.0",
     "esbuild": "^0.19.3",
+    "fs": "^0.0.1-security",
     "mongodb-memory-server": "^9.0.1",
     "mongoose": "^7.5.2",
     "node-fetch": "^3.3.2",
