--- a/.github/workflows/ProjectBackEndWorkflow.yml
+++ b/.github/workflows/ProjectBackEndWorkflow.yml
@@ -36,7 +36,7 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'deploy'
-          cdk_stack: 'TaleasProjectBackendStack'
+          cdk_stack: 'TaleasProjectBackendStack CareerCrushContentStack'
           cdk_args: '--require-approval never'
           actions_comment: false
         env:
