Translation analasys working correctly

--- a/.github/workflows/ProjectBackEndWorkflow copy.yml
+++ b/.github/workflows/ProjectBackEndWorkflow copy.yml
@@ -32,7 +32,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'eu-west-3'
 
-      - name: cdk deploy
+      - name: Main Stack Deployment
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'deploy'
